fixed layout issues

--- a/src/frontend/css/app-beta.less
+++ b/src/frontend/css/app-beta.less
@@ -20,6 +20,10 @@ body {
     height: auto;
 }
 
+.container {
+    position: relative;
+}
+
 .cssload-bell {
 	width: 97px;
 	height: 99px;
